Fix highlight color of select on mobile

--- a/Signals.Web/ClientApp/src/styles.scss
+++ b/Signals.Web/ClientApp/src/styles.scss
@@ -174,6 +174,7 @@ input:-webkit-autofill:active {
         width: 100%;
         padding: 0px;
         cursor: pointer;
+        -webkit-tap-highlight-color: transparent;
     }
 
     input {
